==> aabzel/trunk/source/mcal/mcal_mik32/timer/timer_mcal.c <==
#include "timer_mcal.h"
#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>
#include <string.h>
#include "code_generator.h"
#include "bit_utils.h"
#include "clock_custom_const.h"
#include "core_driver.h"
#include "data_utils.h"
#include "float_utils.h"
#include "log.h"
#include "mik32_hal.h"
#include "sys_config.h"
#include "time_mcal.h"
#include "timer_config.h"
#include "timer_custom_drv.h"
#include "timer_custom_types.h"
#include "timer_types.h"
#include "clock.h"
#include "software_timer_isr.h"
#include "systick_mcal.h"

uint32_t timer_period_get(uint8_t num) {
    uint32_t timer_period32 = 0;
    TIM_TypeDef* TIMx = timer_get_ptr(num);
    if(TIMx) {
        timer_period32 = TIMx->ARR;
    }
    return timer_period32;
}

int32_t timer_bus_clock_get(uint8_t num) {
    int32_t clock_hz = -1;
    uint16_t i = 0;
    for(i = 0; i < ARRAY_SIZE(TimerInfo); i++) {
        if(num == TimerInfo[i].num) {
            uint32_t pclk = 0;
            switch(TimerInfo[i].clock_bus) {
            case CLOCK_BUS_APB1:
                pclk = HAL_RCC_GetPCLK1Freq();
                break;
            case CLOCK_BUS_APB2:
                pclk = HAL_RCC_GetPCLK2Freq();
                break;
            default:
                break;
            }

            clock_hz = 2 * pclk;
            break;
        }
    }
    return clock_hz;
}

uint32_t timer_prescaler_get(uint8_t num) {
    bool res = true;
    uint32_t timer_prescaler = 0xFF;
    uint32_t timer_prescaler32 = 0;

    TIM_TypeDef* TIMx = timer_get_ptr(num);
    if(TIMx) {
        res = true;
        timer_prescaler32 = TIMx->PSC;
    } else {
        res = false;
    }

    if(res) {
        timer_prescaler = MASK_16BIT & timer_prescaler32;
    }
    return timer_prescaler;
}

uint32_t timer_counter_get(uint8_t num) {
    uint32_t timer_cnt32 = 0;
    TIM_TypeDef* TIMx = timer_get_ptr(num);
    if(NULL != TIMx) {
        timer_cnt32 = TIMx->CNT;
    }

    return timer_cnt32;
}

uint64_t timer_period_get_us(uint8_t num) {
    uint64_t real_period_us = 0;
    uint32_t prescaler = 0;
    uint32_t reload = 0;
    TimerHandle_t* TimNode = NULL;
    TimNode = TimerGetNode(num);
    if(TimNode) {
        double fck = (double)timer_bus_clock_get(num);
        double tf = 1.0 / fck;
        prescaler = TimNode->timer_h.Instance->PSC;
        reload = TimNode->timer_h.Instance->ARR;
        double t_psc = tf * ((double)prescaler);

        real_period_us = (uint64_t)(t_psc * ((double)reload)) * 1000000.0;
    }
    return real_period_us;
}

bool timer_init_one(uint8_t num) {
    bool res = false;
    LOG_WARNING(TIMER, "%u Init", num);
    const TimerConfig_t* Config = TimerGetConfig(num);
    if(Config) {
        uint32_t out_load = 0;

        uint32_t prescaler = 0;

        uint32_t bus_clock_hz = 0;
        bus_clock_hz = timer_bus_clock_get(num);
        prescaler = timer_calc_prescaler((uint32_t)bus_clock_hz, Config->cnt_period_ns, PRESCALER_MAX);
        res = timer_calc_registers(Config->period_ms, Config->period_us, Config->period_ns, bus_clock_hz, prescaler,
                                   &out_load, 0xFFFFFFFF);
        if(res) {
            TimerHandle_t* Node = TimerGetNode(num);
            // HAL_TIM_IRQHandler(&Node->timer_h);

            TIM_MasterConfigTypeDef sMasterConfig = {0};
            TIM_ClockConfigTypeDef sClockSourceConfig = {0};
            TIM_TypeDef* TimerInstanceNode = timer_get_ptr(num);
            if(TimerInstanceNode && Node) {
                Node->int_cnt = 0;
                Node->timer_h.Instance = TimerInstanceNode;
                Node->timer_h.Init.Prescaler = prescaler;
                Node->timer_h.Init.CounterMode = TIM_COUNTERMODE_UP;
                Node->timer_h.Init.Period = out_load;
                Node->timer_h.Init.ClockDivision = TIM_CLOCKDIVISION_DIV1;
                Node->timer_h.Init.AutoReloadPreload = TIM_AUTORELOAD_PRELOAD_ENABLE;
                if(HAL_OK == HAL_TIM_Base_Init(&Node->timer_h)) {
                    res = true;
                    LOG_INFO(TIMER, "%u InitOk", num);
                }

                sClockSourceConfig.ClockSource = TIM_CLOCKSOURCE_INTERNAL;
                if(HAL_TIM_ConfigClockSource(&Node->timer_h, &sClockSourceConfig) != HAL_OK) {
                    res = false;
                    LOG_ERROR(TIMER, "%u SetClkSrcErr", num);
                }

                sMasterConfig.MasterOutputTrigger = TIM_TRGO_RESET;
                sMasterConfig.MasterSlaveMode = TIM_MASTERSLAVEMODE_DISABLE;
                if(HAL_TIMEx_MasterConfigSynchronization(&Node->timer_h, &sMasterConfig) != HAL_OK) {
                    res = false;
                    LOG_ERROR(TIMER, "%u SetSyncErr", num);
                }

                HAL_StatusTypeDef ret;
                /* prevent timer interrupt at timer start */
                Node->timer_h.Instance->EGR |= TIM_EGR_UG;
                __NOP();
                __NOP();
                __NOP();
                Node->timer_h.Instance->SR = 0; //&= ~TIM_FLAG_UPDATE;
                ret = HAL_TIM_Base_Start_IT(&Node->timer_h);
                if(HAL_OK == ret) {
                    res = true;
                    Node->int_cnt = 0;
                    LOG_INFO(TIMER, "%u StartOk", num);
                } else {
                    res = false;
                    LOG_ERROR(TIMER, "%u StartErr", num);
                }
            } else {
                res = false;
            }
        } else {
#ifdef HAS_LOG
            LOG_ERROR(TIMER, "CalcPscLdErr");
#endif
        }
    }

    return res;
}
