==> aabzel/trunk/source/mcal/mcal_at32f4/timer/timer_mcal.c <==
#include "timer_mcal.h"
#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>
#include <string.h>
#include "at32_misc.h"
#include "bit_utils.h"
#include "clock.h"
#include "clock_custom_const.h"
#include "common_diag.h"
#include "core_driver.h"
#include "data_utils.h"
#include "float_utils.h"
#include "log.h"
#include "microcontroller_const.h"
#include "time_mcal.h"
#include "timer_custom_drv.h"
#include "timer_custom_types.h"
#include "timer_utils.h"
#include "utils_math.h"

int32_t timer_bus_clock_get(uint8_t num) {
    int32_t clock_hz = -1;
    TimerInfo_t* Info = TimerGetInfo(num);
    if(Info) {
        crm_clocks_freq_type clocks_struct = {0};
        crm_clocks_freq_get(&clocks_struct);
        switch(Info->clock_bus) {
        case CLOCK_BUS_APB1:
            clock_hz = (int32_t)(2 * clocks_struct.apb1_freq);
            break;
        case CLOCK_BUS_APB2:
            clock_hz = (int32_t)(2 * clocks_struct.apb2_freq);
            break; /*!< apb2 bus clock frequency */
        default:
            break;
        }
    }
    LOG_PARN(TIMER, "TIMER%u BusClck:%u Hz", num, clock_hz);
    return clock_hz;
}

uint32_t timer_period_get(uint8_t num) {
    uint32_t period = 0;
    TimerInfo_t* Info = TimerGetInfo(num);
    if(Info) {
        period = tmr_period_value_get(Info->TMRx);
    }
    return period;
}

uint64_t timer_period_get_us(uint8_t num) {
    uint64_t real_period_us = 0;
    double period_s = timer_period_get_s(num);
    real_period_us = sec_to_usec(period_s);
    return real_period_us;
}

uint32_t timer_prescaler_get(uint8_t num) {
    uint32_t prescaler = 0xFF;
    TimerInfo_t* Info = TimerGetInfo(num);
    if(Info) {
        prescaler = tmr_div_value_get(Info->TMRx);
    }
    return prescaler;
}

bool timer_init_one(uint8_t num) {
    bool res = false;
    const TimerConfig_t* Config = TimerGetConfig(num);
    if(Config) {
        LOG_WARNING(TIMER, "Init:%u", num);
#ifdef HAS_TIMER_DIAG
        LOG_WARNING(TIMER, "Config:%s", TimerConfigToStr(Config));
#endif
        TimerHandle_t* Node = TimerGetNode(num);
        if(Node) {
            TimerInfo_t* Info = TimerGetInfo(num);
            if(Info) {
                LOG_WARNING(TIMER, "SpotInfo:%u", num);
                Node->TMRx = Info->TMRx;
                /* enable tmr clock */
                crm_periph_clock_enable(Info->clock_type, TRUE);

                uint32_t period = 0;
                uint32_t bus_clock_hz = timer_bus_clock_get(num);
                LOG_INFO(TIMER, "TIMER%u TimerBusClck:%u Hz", num, bus_clock_hz);

                uint32_t prescaler = timer_calc_prescaler(bus_clock_hz, Config->cnt_period_ns, PRESCALER_MAX);
                LOG_INFO(TIMER, "TIMER%u prescaler:%u", num, prescaler);

                uint32_t max_val = (uint32_t)(ipow(2, (uint32_t)Info->resolution_bit) - 2);
                LOG_INFO(TIMER, "TIMER%u MaxVal:%u,Resol:%u bit", num, max_val, Info->resolution_bit);

                res = timer_calc_registers(Config->period_ms, Config->period_us, Config->period_ns, bus_clock_hz,
                                           prescaler, &period, max_val);
                if(res) {
                    LOG_DEBUG(TIMER, "TIMER%u,PeriodOk", num);
                } else {
                    res = false;
                    LOG_ERROR(TIMER, "TIMER%u,PeriodErr", num);
                }
                LOG_INFO(TIMER, "TIMER%u prescaler:%u,period:%u", num, prescaler, period);
                tmr_base_init(Info->TMRx, period, prescaler);

                tmr_count_mode_type tmr_cnt_dir = TMR_COUNT_UP;
                tmr_cnt_dir_set(Info->TMRx, tmr_cnt_dir);

                tmr_clock_source_div_set(Info->TMRx, TMR_CLOCK_DIV1);

                if(Config->interrupt_on) {
                    LOG_INFO(TIMER, "TIMER%u DeployISRs", num);
                    /* overflow interrupt enable */
                    tmr_interrupt_enable(Info->TMRx, TMR_OVF_INT, TRUE);
                    tmr_interrupt_enable(Info->TMRx, TMR_C1_INT, TRUE);
                    tmr_interrupt_enable(Info->TMRx, TMR_C2_INT, TRUE);
                    tmr_interrupt_enable(Info->TMRx, TMR_C3_INT, TRUE);
                    tmr_interrupt_enable(Info->TMRx, TMR_C4_INT, TRUE);
                    tmr_interrupt_enable(Info->TMRx, TMR_HALL_INT, TRUE);
                    tmr_interrupt_enable(Info->TMRx, TMR_TRIGGER_INT, TRUE);
                    tmr_interrupt_enable(Info->TMRx, TMR_BRK_INT, TRUE);

                    /* tmr1 hall interrupt nvic init */
                    LOG_INFO(TIMER, "TIMER%u IRQn:%u", num, Info->irq_n);
                    nvic_irq_enable(Info->irq_n, 10, 10);
                }

                /* enable tmr1 */
                //  tmr_counter_enable(Info->TMRx, TRUE);
                res = timer_ctrl(num, Config->on_off);
            } else {
                res = false;
                LOG_ERROR(TIMER, "TIMER%u NoInfo", num);
            }
        } else {
            res = false;
            LOG_ERROR(TIMER, "TIMER%u NoNode", num);
        }
    } else {
        res = false;
        LOG_DEBUG(TIMER, "TIMER%u NoConfig", num);
    }
    return res;
}

uint32_t timer_counter_get(uint8_t num) {
    uint32_t counter_value = 0;
    TimerInfo_t* Info = TimerGetInfo(num);
    if(Info) {
        if(Info->TMRx) {
            counter_value = tmr_counter_value_get(Info->TMRx);
        }
    }
    return counter_value;
}
